Fix z-index and animation

--- a/src/sass/misc/_landing.scss
+++ b/src/sass/misc/_landing.scss
@@ -8,7 +8,7 @@
         }
     }
 
-    #banner {
+    #hero {
         position: relative;
         display: flex;
         flex-direction: column;
@@ -31,7 +31,6 @@
         h1 {
             margin-bottom: .5rem;
             font-weight: var(--semiBoldWeight);
-            z-index: 99999;
 
             @media (min-width: $bp-md) {
                 margin-bottom: 1.5rem;
@@ -40,7 +39,7 @@
 
         h1, .subtitle {
             color: #ffffff;
-            z-index: 99999;
+            z-index: $hero-text-z;
         }
 
         &-animation {
